--- a/src/template.html
+++ b/src/template.html
@@ -12,11 +12,13 @@
     
   </div>
   <div id="world">
+    <div id="container">
       <h2 id="detalii">Use 'w' or '&#9650;' to move up and 's' or '&#9660;' to move down in order to get as many gems as you can.</h2>
       <h2 id="detalii">The score will be updated on the top left of the screen</h2>
       <div class="start-page" id="game" >
         <p class="text" id='titlu'>Airplane Game</p>
         <button type="button" id="startjoc" onclick="startGame()">Start Game</button>
     </div>
+    <div>
   </body>
 </html>
